# qrotor-bstep

./: README.md  README.md~
controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
controller/cfg/: Controller.cfg  Controller.cfg~  Mixer.cfg  Mixer.cfg~  Setpoints.cfg
controller/launch/: c_lp.launch  c_lp.launch~  controller.launch  controller.launch~  ground_station.launch  ks.launch  ksp.launch~  ksvp.launch~  lam.launch  lam.launch~  onboard.launch
controller/src/: attitude.cpp  attitude.cpp~  mixer.cpp  mixer.cpp~  position.cpp  position.cpp~  setpoints.cpp  setpoints.cpp~
lpms/: .gitignore  CMakeLists.txt  lpms_node.cpp  package.xml
lpms/include/lpms/: lpms.h  lpms_v1.h
lpms/launch/: lpms.launch
lpms/src/: lpms.cpp  lpms_v1.cpp
lpsensor/: README  liblpsensor-1.3.5-Linux.deb
lpsensor/include/: DeviceListItem.h  ImuData.h  LpmsDefinitions.h  LpmsSensorI.h  LpmsSensorManagerI.h
lpsensor/sample/: CMakeLists.txt  main.cpp
matlab/ToolOpt/: RKStep.m  conj_grad.m  conj_grad1.m  gradCtogrg.m  linesearch.m
matlab/bckstp/: funQR1.m  pmQR1CG.m  qr6.m  qsim.m  results.mat  states_bk.fig
matlab/bckstp_sto/: IntrfzQR1.m  RandNumGen.m  funQR1.m  pmQR1CG.m  qr6.m  qsim.m  results.mat  states_bk_sto.fig
matlab/pos_pid/inner/: funQR1.m  pmQR1CG.m  qr6.m  results.mat
matlab/pos_pid/outer/: funQR1.m  pmQR1CG.m  qr6.m  qsim.m  results.mat  states_pid.fig
vicon_bridge/launch/: vicon.launch
