<?xml version="1.0"?>
<package>
  <name>lpms</name>
  <version>0.0.0</version>
  <description>The lpms package</description>

  <maintainer email="luismvc@todo.todo">luismvc</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller</run_depend>

  <export>

  </export>
</package>
